fix: contraste do texto no modo escuro usando var(--ion-text-color)

--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -39,7 +39,7 @@ ion-button {
 }
 
 ion-card-content p {
-  color: #222222;
+  color: var(--ion-text-color);
 }
 
 ion-card-subtitle {
